# gsl_integral_solver

./: .gitignore  CMakeLists.txt  Makefile  README  main.c
src/: CMakeLists.txt  aux_g.c  aux_g.h  fred2_interp.c  fred2_interp.h  fred2_solver.c  fred2_solver.h  kernel.c  kernel.h  main.c  params.h
